Dev (#5)
增加非短信消息记录,增加redis缓存模板和账号
