# openapi.yaml
@@ -59,8 +59,6 @@ components:
         BatchSendRequest:
             type: object
             properties:
-                code:
-                    type: string
                 messageTemplateId:
                     type: integer
                     format: int64
@@ -88,8 +86,6 @@ components:
         SendRequest:
             type: object
             properties:
-                code:
-                    type: string
                 messageTemplateId:
                     type: integer
                     format: int64
@@ -98,7 +94,7 @@ components:
         SendResponse:
             type: object
             properties:
-                code:
+                requestId:
                     type: string
         Status:
             type: object
